<resources>
    <string name="app_name">K-Dramas Manager</string>
    <string name="app_logo">Logo de K-Drama Manager</string>
    <string name="app_tagline">Gestiona tu colección de dramas coreanos</string>

    <string name="guardar">Guardar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="volver">Volver</string>
    <string name="ver_lista">Ver Lista</string>

    <string name="lista_vacia">No hay K-Dramas registrados</string>
    <string name="agregar_primer_kdrama">Agrega tu primer K-Drama para comenzar</string>

    <string name="titulo">Título</string>
    <string name="genero">Género</string>
    <string name="anio">Año</string>
    <string name="capitulos">Capítulos</string>
    <string name="calificacion">Calificación</string>
    <string name="estado">Estado</string>
    <string name="imagen_url">URL de Imagen</string>

    <string name="operacion_exitosa">Operación completada exitosamente</string>
    <string name="error_guardar">Error al guardar el K-Drama</string>
    <string name="error_actualizar">Error al actualizar el K-Drama</string>
    <string name="error_eliminar">Error al eliminar el K-Drama</string>
    <string name="lista_de_k_dramas">Lista de K-Dramas</string>
    <string name="editar_k_drama">Editar K-Drama</string>
    <string name="t_tulo_del_k_drama">Título del K-Drama</string>
    <string name="buscar_kdrama" />
    <string name="agregar_kdrama" />
    <string name="imagen_del_k_drama">Imagen del K-Drama</string>
    <string name="t_tulo_del_k_drama2">Título del K-Drama</string>
    <string name="g_nero">Género</string>
    <string name="ver_en_netflix">Ver en Netflix</string>
    <string name="_2024">2024</string>
    <string name="_16_cap_tulos">• 16 capítulos</string>
    <string name="viendo">Viendo</string>
    <string name="ver_trailer">Ver trailer</string>
    <string name="default_web_client_id" />
    <string name="abrir_chat" />
    <string name="enviar_mensaje" />
    <string name="escribe_mensaje" />
    <string name="iniciar_sesi_n_con_google">Iniciar sesión con Google</string>
    <string name="agregar_contacto" />
    <string name="ver_perfil" />
    <string name="menu_opciones" />
</resources>